# RustyRayTracer

./: .gitignore  CMakeLists.txt  CREDITS.txt  Cargo.toml  README.md  anim.py  build.rs  fixes.md  optimisation.md  tests.py
parse/: AST.py  CodeGen.py  GherkinParser.py  HeaderParser.py  README.md  base_parser.py  common.py  config.py  gherkin.py  header.py  parsed_headers.txt  tests.py
scenes/: air-bubble.yml  cover.yml  metal.yml  puppets.yml  reflect-refract.yml  table.yml  three-spheres.yml
shaders/: CMakeLists.txt  Cargo.toml
shaders/shaders.xcodeproj/: project.pbxproj
shaders/src/: bindings.h  camera.rs  common.h  la.cc  la.h  lib.cc  lib.cpp  lib.rs  material.cc  material.h  material.metal  material.rs  ray.cc  ray.h  ray.metal  ray.rs  shaders.cc  shaders.metal  shapes.cc  shapes.h  shapes.metal  shapes.rs  shared.rs  types.h  world.cc  world.h  world.metal  world.rs
shaders/tests/: README.md  feature_world.h  intersections.cc  main.cc  repr.h  tests_common.h
src/: Camera.cc  Camera.h  Canvas.cc  Canvas.h  Colour.cc  Colour.h  Material.cc  Material.h  Matrix.cc  Matrix.h  Pattern.cc  Pattern.h  Ray.cc  Ray.h  Tuple.cc  Tuple.h  World.cc  World.h  boilerplate.rs  common.h  controller.rs  demo.cc  demo.h  demo.rs  lib.rs  main.cc  main.rs  scene.rs  shader_types.rs  tests.rs  timer.rs  types.rs  window.rs
src/gpu/: CREDITS.txt  base.rs  mod.rs  render.rs  setup.rs
src/rtc_tests/: README.md  intersections.rs  mod.rs  rays.rs
src/shapes/: Plane.cc  Plane.h  Shape.cc  Shape.h  Sphere.cc  Sphere.h
src/tests/: README.md  feature_rays.rs  mod.rs
src/vulkan/: CREDITS.txt  base.rs  mod.rs  render.rs
tests/: example.feature  example.h
