[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"
default-run="gpu_runner"

[dependencies]
metal = "0.24.0"
winit = "0.28.3"
cocoa = "0.24.0"
glam = "0.23.0"
core-graphics-types = "0.1"
objc = "0.2.7"
rayon="1.7.0"
softbuffer = "0.2.0"

[build-dependencies]
cc = "1.0.79"
bindgen = "0.65.1"
cbindgen = "0.24.3"